# aa-package-monitor

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yaml
package_monitor/: __init__.py  managers.py  tasks.py  views.py
package_monitor/core/: distribution_packages.py  pypi.py
package_monitor/management/commands/: packagemonitorcli.py
package_monitor/templates/package_monitor/: base.html  index.html
package_monitor/tests/: test_commands.py  test_managers.py  test_packagemonitorcli.py  test_tasks.py  test_views.py
package_monitor/tests/core/: test_distribution_packages.py  test_schedule.py
testauth/settings/: base.py  local.py
testauth/settings_aa4/: base.py  local.py
