[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aa-package-monitor"
dynamic = ["version", "description"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Erik Kalkoken", email = "kalkoken87@gmail.com" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth-app-utils>=1.33",
    "allianceauth>=4,<6",
    "importlib_metadata",
    "aiohttp>=3.7,<3.14",           # FIXME: workaround for aioreponses issue 289
    "packaging>=22",
    "recurrent>=0.4.1",
    "python-dateutil>=2.9",
    "PyYAML",
    "humanize>=4.7",
]

[project.optional-dependencies]
test = ["coverage", "factory_boy", "requests-mock", "aioresponses"]

[project.urls]
Homepage = "https://github.com/AllianceAuth-Apps/aa-package-monitor"
Source = "https://github.com/AllianceAuth-Apps/aa-package-monitor"
Tracker = "https://github.com/AllianceAuth-Apps/aa-package-monitor/issues"

[tool.flit.module]
name = "package_monitor"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_allianceauth = ["allianceauth", "app_utils"]
known_django = ["django", "django_webtest", "esi", "eveuniverse"]

[tool.pylint.'MASTER']
ignore-patterns = ["__init__.py", "auth_hooks.py", "apps.py"]
ignore-paths = ["^.*/tests/.*$", "^.*/migrations/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "ex"]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["R0902", "R0903"]
